syntax = "proto3";

package upload.hr.contract_print;


service HrContractPrintService {
  rpc printContract (HrContractPrintRequest) returns (Response);
  rpc printBasCertificate (BasCertificatePrintRequest) returns (Response);

  
}

message HrContractPrintResult { 
  int32 IdxNo = 1;
  string ContractDate = 2;
  string ContractKind = 3;
  int32 EmpSeq = 4;
  int32 CertificateType = 5;

}

message BasCertificatePrintResult { 
  int32 IdxNo = 1;
  string SMCertiTypeName = 2;
  string ApplyDate = 3;
  string IssueDate = 4;
  string EmpName = 5;
  int32 EmpSeq = 6;
  string EmpID = 7;
  string EmpEngName = 8;
  string DeptName = 9;
  int32 DeptSeq = 10;
  string UMJpName = 11;
  string EntDate = 12;
  string RetireDate = 13;
  string ResidID = 14;
  string Addr = 15;
  string JobName = 16;
  string CertiCnt = 17;
  string CertiDecCnt = 18;
  string CertiSubmit = 19;
  string TaxFrYm = 20;
  string TaxToYm = 21;
  string TaxEmpName = 22;
  bool IsAgree = 23;
  string IssueNo = 24;
  bool IsPrt = 25;
  string IssueEmpName = 26;
  string IssueEmpSeq = 27;
  string IsNoIssue = 28;
  string NoIssueReason = 29;
  string IsEmpApp = 30;
  string CompanyName = 31;
  string CompanyAddr = 32;
  string Owner = 33;
  string OwnerJpName = 34;
  string Term = 35;
  int32 SMCertiType = 36;
  string TypeSeq = 37;
  string status = 38;
  int32 CertiSeq = 39;

}


message HrContractPrintRequest {
  repeated HrContractPrintResult result = 1;  
  map<string, string> metadata = 2;
}

message BasCertificatePrintRequest {
  repeated BasCertificatePrintResult result = 1;  
  map<string, string> metadata = 2;
}


message Response {
  bool status = 1;  
  string message = 2;      
  string data = 3; 
  string errors = 4;
}